--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <title>contact</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col">
+          <a href="/">Homepage</a>
+        </div>
+        <div class="col">
+          <a href="/photo.html">Gallery</a>
+        </div>
+        <div class="col">
+          <a href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
