--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <title>Homepage</title>
   </head>
-  <body></body>
+  <body>
+    <h1>🥐 Croissant</h1>
+    <p>
+      A croissant is crescent shaped roll made with yeast-risen dough. The dough
+      is typically layered with butter, then rolled, and folded several times in
+      a process called lamination. The final dough is cut into triangles and
+      rolled into a crescent shape.The process of lamination results in a
+      layered, flaky textured roll, more like puff pastry. The main ingredients
+      in a croissant are flour, yeast, salt, sugar, milk, water, eggs and
+      butter. A well baked croissant should be flaky and crisp on the outside
+      and tender and moist on the inside. It should be evenly baked and well
+      aerated. There are many iterations of the croissant that include the
+      almond croissant and chocolate croissant.
+    </p>
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col">
+          <a href="/">Homepage</a>
+        </div>
+        <div class="col">
+          <a href="/photo.html">Gallery</a>
+        </div>
+        <div class="col">
+          <a href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
