--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
     <title>contact</title>
   </head>
   <body>
+    <h1>Contact</h1>
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col">
