--- a/photo.html
+++ b/photo.html
@@ -19,6 +19,7 @@
     <title>Gallery</title>
   </head>
   <body>
+    <h1>Gallery</h1>
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col">
