added image for gallery and updated link styling

--- a/photo.html
+++ b/photo.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <h1>Gallery</h1>
+    <img src="/css/croissant.jpg" />
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col">
