--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,9 @@
   </head>
   <body>
     <h1>Contact</h1>
+    <a href="mailto:celestial_bliss2@hotmail.com"
+      >Celestial_bliss2@hotmail.com</a
+    >
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col">
