--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,17 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>contact</title>
+    <title>Contact Us</title>
+    <meta name="description" content="contact us on CF.com" />
   </head>
   <body>
-    <h1>Contact</h1>
-    <a href="mailto:celestial_bliss2@hotmail.com"
-      >Celestial_bliss2@hotmail.com</a
-    >
+    <h1>🥐🌸 Contact Us</h1>
+    <p>
+      To order our specialties, contact us at
+      <a href="mailto:celestial_bliss2@hotmail.com"
+        >Celestial_bliss2@hotmail.com</a
+      >
+    </p>
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col">
