--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Homepage</title>
+    <title>Croissant and Flower CF.com</title>
+    <meta
+      name="description"
+      content="Two worlds collide to create an edible masterpiece"
+    />
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
+    <h1>🥐🌸 Croissant</h1>
     <p>
       A croissant is crescent shaped roll made with yeast-risen dough. The dough
       is typically layered with butter, then rolled, and folded several times in
