--- a/photo.html
+++ b/photo.html
@@ -16,11 +16,18 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Gallery</title>
+    <title>CF.com Gallery</title>
+    <meta
+      name="description"
+      content="Example of Croissant and Flower creations"
+    />
   </head>
   <body>
-    <h1>Gallery</h1>
-    <img src="/css/croissant.jpg" />
+    <h1>🥐🌸 Croissant and Flower Gallery</h1>
+    <img
+      src="/css/croissant.jpg"
+      alt="croissant plated with organic grown flowers"
+    />
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col">
